--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -413,7 +413,7 @@ button,
     letter-spacing: normal;
     text-align: center;
     text-decoration: none;
-    text-transform: uppercase;
+    text-transform:  initial;
     white-space: nowrap;
     font-size: 1.7rem;
     max-width: fit-content;
