--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -256,7 +256,7 @@ h4 {
     font-size: 1.7rem;
     line-height: 1.2;
     text-align: center;
-    padding: 0 0 2em 0;
+    padding: 0 0 2px 0;
 }
 
 h5 {
