--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1185,7 +1185,7 @@ ul.icons {
     padding: 1rem 1rem 1rem 1rem;
 }
 
-/* Wrapper (style1) */
+Wrapper (style1)
 .wrapper.style1 > .inner {
     padding: 0rem 0rem 1rem 0rem;
     align-items: center;
