--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1167,7 +1167,7 @@ ul.icons {
     -webkit-align-items: center;
     -webkit-justify-content: center;
     justify-content: inherit;
-    height: 100%;
+    height: 65vh;
 }
 
     .banner.style5 .content {
