--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -556,6 +556,7 @@ button,
     border-bottom: none;
     position: relative;
     text-align: center;
+    padding: 1rem 1rem 1rem 1rem;
 }
 
     .icon:before {
