--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1165,7 +1165,7 @@ ul.icons {
     -webkit-align-items: center;
     -webkit-justify-content: center;
     justify-content: inherit;
-    height: 60vh;
+    height: 100%;
 }
 
     .banner.style5 .content {
