--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1159,6 +1159,7 @@ ul.icons {
 /* Banner (style5) */
 .banner.style5 {
     overflow-x: hidden;
+    overflow-y: hidden;
     text-align: center;
     align-items: center;
     -webkit-align-items: center;
